<resources>
    <string name="app_name">小小FTP助手</string>

    <string name="siteTitle">FTP连接</string>
    <string name="fileTitle">文件管理</string>
    <string name="moreTitle">更多</string>

    <string name="close">关闭</string>
    <string name="image">图片</string>

    <string name="addSite">添加站点</string>
    <string name="editSite">编辑站点</string>
    <string name="getqrcode">扫码添加FTP</string>

    <string name="translist">传输列表</string>
    <string name="function">功能</string>
    <string name="openlocalfile">本地文件</string>
    <string name="setting">设置</string>
    <string name="dirfirst">文件夹优先</string>
    <string name="wifionly">仅WIFI网络下传输</string>
    <string name="showallfile">显示隐藏文件</string>
    <string name="multdowmload">多线程下载</string>

    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="finish">完成</string>
    <string name="ok">好</string>

    <string name="copy">复制</string>
    <string name="cut">剪切</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="rename">重命名</string>
    <string name="multiselect">多选</string>
    <string name="about">属性</string>
    <string name="scan">扫码</string>
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="showqrcode">显示二维码</string>
    <string name="menu">选择操作</string>
    <string name="translater">传输列表</string>
    <string name="qrimagetip">点击图片可以进行保存</string>
    <string name="detailtitle">文件详情</string>
    <string name="know">知道了</string>

    <string name="sortPattern">排序依据</string>
    <string name="showPattern">查看模式</string>
    <string name="myTheme">主题</string>


    <string name="detaillabel">名称：\n路径：\n大小：\n时间戳：\n权限：</string>

</resources>
