<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybgr"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/renameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/rename" />

        <EditText
            android:id="@+id/renametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/renamecancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbtn"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/renameconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbtn"
            android:text="@string/ok"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>