<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80999999"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/confirmPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/confirmText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/multdowmload"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirmCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbtn"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/confirmOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbtn"
            android:text="@string/ok"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>