<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybgr"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/detailPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/detailtitle"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="2"
                android:paddingRight="8dp"
                android:text="@string/detaillabel" />

            <TextView
                android:id="@+id/detailContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="2"/>
        </LinearLayout>

        <Button
            android:id="@+id/detailHide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbtn"
            android:text="@string/know"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>